# master-year2-decision-trees

./: .gitignore  README.md  project.ipynb  pyproject.toml
data/: test.csv
