[project]
name = "m2ecap2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2",
    "ipykernel>=6.0",
    "ipython>=8.0",
    "jupyterlab>=4.0",
    "lightgbm>=4.0",
    "matplotlib>=3.9",
    "notebook>=7.0",
    "numpy>=2.1",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "shap>=0.46",
    "gensim>=4.3",
    "xgboost>=2.0",
]
